--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
+    "react-medium-editor": "^1.8.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   },
