--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^5.2.0",
     "react-medium-editor": "^1.8.1",
     "react-typography": "^0.16.19",
+    "turndown": "^7.0.0",
     "typography": "^0.16.19"
   },
   "devDependencies": {
