--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.20.36",
     "gatsby-image": "^2.0.35",
     "gatsby-plugin-google-analytics": "^2.1.4",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^2.2.3",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-offline": "^2.2.4",
